# visual_servo

./: 91-comm.rules  FREE_Arrangement.txt  README.md  change_udev_rules.txt  multi_machine.md  update.txt
accumulator_pkg/: CMakeLists.txt  package.xml
accumulator_pkg/scripts/: accumulator.py
berry_detection_mrcnn_pkg/: CMakeLists.txt  package.xml  setup.py
berry_detection_mrcnn_pkg/scripts/: berry_detect.py  test.py
berry_detection_pkg/: CMakeLists.txt  package.xml  setup.py
berry_detection_pkg/scripts/: berry_detect.py
calibration_pkg/: CMakeLists.txt  package.xml
calibration_pkg/launch/: arm_calibration.launch  calibration.launch
calibration_pkg/scripts/: arm_calibration_node_exec.py  calibration_node_exec.py
main_menu/: CMakeLists.txt  package.xml
main_menu/launch/: bed_scan_demo_ts.launch  bed_touch_demo.launch  bed_zoom_demo_ts.launch  chair_demo_ts.launch  chair_high_demo.launch  demo_ts.launch  main.launch  pill_scan.launch  ramp_demo.launch  simple_ts.launch  soy_bean_demo.launch
main_menu/scripts/: bed_demo_scan.py  bed_demo_zoom.py  bed_touch_demo.py  chair_demo.py  chair_high_inspection.py  (+6 more)
move_arm/: CMakeLists.txt  package.xml
patriot_pkg/: CMakeLists.txt  package.xml
pi_comm_pkg/: CMakeLists.txt  package.xml  setup.py
rigid_arm/: ik_fast_config.md  rigid_arm.urdf
rigid_arm/rigid_arm_ikfast_arm_plugin/: CMakeLists.txt  package.xml  rigid_arm_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
rigid_arm/rigid_arm_ikfast_arm_plugin/include/: ikfast.h
rigid_arm/rigid_arm_ikfast_arm_plugin/src/: rigid_arm_arm_ikfast_moveit_plugin.cpp  rigid_arm_arm_ikfast_solver.cpp
soft_arm_trainer_pkg/: CMakeLists.txt  package.xml
state_machine_pkg/: CMakeLists.txt  package.xml  setup.py
task_space_pkg/: CMakeLists.txt  package.xml
(+120 files in other folders)
